--- a/responsive.css
+++ b/responsive.css
@@ -12,6 +12,9 @@
   .heading h2 {
     font-size: 20px;
   }
+  .menu-icon{
+    display: block; /*menampilkan ikon menu*/
+  }
 }
 
 /* Untuk Smartphone */
