--- a/responsive.css
+++ b/responsive.css
@@ -13,7 +13,7 @@
     font-size: 20px;
   }
   .menu-icon{
-    display: block; /*menampilkan ikon menu*/
+    display: none; /*menampilkan ikon menu*/
   }
 }
 
